<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <!-- Identity -->
    <modelVersion>4.0.0</modelVersion>
    <groupId>it.BruttiF27</groupId>
    <artifactId>BalanceManager</artifactId>
    <version>1.0-SNAPSHOT</version>

    <!-- Properties (constants) -->
    <properties>
        <java.version>25</java.version>
        <javafx.version>25.0.1</javafx.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- Dependencies -->
    <dependencies>

        <!-- JUnit -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>

        <!-- JavaFX -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>25.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>25.0.1</version>
        </dependency>

    </dependencies>

    <!-- Build configs -->
    <build>
        <plugins>

            <!-- Javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.2</version>
                <configuration>
                    <source>1.8</source>
                    <show>private</show>
                </configuration>
            </plugin>

            <!-- JavaFX runner -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>it.BruttiF27.balanceManager.MainBalanceManager</mainClass>
                    <options>
                        <option>--enable-native-access=ALL-UNNAMED</option>
                    </options>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <!-- OS-specific JavaFX graphics -->
    <profiles>

        <profile>
            <id>linux</id>
            <activation>
                <os><family>unix</family></os>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                    <version>25.0.1</version>
                    <classifier>linux</classifier>
                </dependency>
            </dependencies>
        </profile>

        <profile>
            <id>mac</id>
            <activation>
                <os><family>mac</family></os>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                    <version>25.0.1</version>
                    <classifier>mac</classifier>
                </dependency>
            </dependencies>
        </profile>

        <profile>
            <id>windows</id>
            <activation>
                <os><family>windows</family></os>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                    <version>25.0.1</version>
                    <classifier>win</classifier>
                </dependency>
            </dependencies>
        </profile>

    </profiles>

</project>